# market-processor

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.ko.md  README.md
.github/workflows/: ci.yml
bench/: bench_e2e.cpp  bench_json_parse.cpp  bench_orderbook.cpp  bench_queue.cpp
config/: dev.yaml  prod.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.jsx  index.css
dashboard/src/components/: MetricsPanel.jsx  OrderBookChart.jsx  ReplayControls.jsx  SignalLogPanel.jsx
dashboard/src/hooks/: useEngineSocket.js
docker/: Dockerfile.dashboard  Dockerfile.engine  docker-compose.yml  nginx.conf
docs/: architecture.md  benchmarks.md  signals.md
scripts/: run_bench.sh
src/: main.cpp
src/config/: config_loader.cpp  config_loader.h
src/core/: clock.h  spsc_queue.h  thread_utils.h  types.h
src/engine/: aggregator.cpp  aggregator.h  order_book.cpp  order_book.h  processing_thread.cpp  processing_thread.h  signal_detector.cpp  signal_detector.h  trade_aggregator.cpp  trade_aggregator.h
src/feed/: depth_parser.cpp  depth_parser.h  feed_handler.cpp  feed_handler.h  reconnect_policy.h  trade_parser.cpp  trade_parser.h  ws_client.cpp  ws_client.h
src/output/: disk_logger.cpp  disk_logger.h  metrics_server.cpp  metrics_server.h  ws_server.cpp  ws_server.h
src/replay/: replay_engine.cpp  replay_engine.h
test/: test_aggregator.cpp  test_depth_parser.cpp  test_disk_logger.cpp  test_order_book.cpp  test_replay_engine.cpp  test_signal_detector.cpp  test_spsc_queue.cpp  test_trade_aggregator.cpp  test_trade_parser.cpp
